Fixes footer year spacing

--- a/themes/supersimple/assets/styles/footer.scss
+++ b/themes/supersimple/assets/styles/footer.scss
@@ -120,10 +120,10 @@ footer {
                     a {
                         display: none;
                     }
-                }
 
-                .footer-year {
-                    margin-top: 0;
+                    .footer-year {
+                        margin-top: unset;
+                    }
                 }
             }
         }
